@@ -1,11 +1,12 @@
-DEFINED_PHASES=compile install prepare pretend
-DESCRIPTION=A Program for Sequential, Parallel & Distributed Inference of Large Phylogenetic Trees
-EAPI=4
+DEFINED_PHASES=compile install prepare
+DESCRIPTION=Sequential, Parallel & Distributed Inference of Large Phylogenetic Trees
+EAPI=5
 HOMEPAGE=http://wwwkramer.in.tum.de/exelixis/software.html
 IUSE=cpu_flags_x86_sse3 +threads
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
+REQUIRED_USE=cpu_flags_x86_sse3
 SLOT=0
 SRC_URI=http://wwwkramer.in.tum.de/exelixis/software/RAxML-7.2.6.tar.bz2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=cfb2c83a4346ec83f3dbb0f311690ccf
+_md5_=61cb22ef4af4cc756aede36360c3ed86
