@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX raxml-7.2.5-makefile.patch 1420 SHA256 f3c9d9eaacf7a7e0d1594e3d689f938ff82c2dbdb4c4c4f2ed81a861ebd7adb5 SHA512 f905bfb638396c81ccd5f66deaf39c574bb9d97a94ff78b786214390f2ac715b7d4e251ba5d13701805f3928f450b6affefce565e7c30544d32e33ed6e5f20ca WHIRLPOOL d26222d935a8462cf10b6244ed043f1437038039c24486993c022332a7148bdd759704a9698242a1bbd60053afde0061edc31684c022085eb0e041e38818c42f
 AUX raxml-7.2.6-makefile.patch 777 SHA256 0e87b5cd6375669e660ef6e3c37e51e751ea8846de6c52060f484380c28610d5 SHA512 0cc326e8fed0882c56193fef9d1c98577f2252acc4dc25e650e0806d89ded0e2911e6967272a6d101cf830cfe63a190a8f5220fd7573864f5fa60106069ad74f WHIRLPOOL 896bb8f27d458e1d555ffb462abf89f55c487e595a604b3446c579a2e95719cfdfb1911873ca2570a73c3299ef49f0c489ee0c127fcb6e1acdcf907c748459b0
-DIST RAxML-7.2.6.tar.bz2 202803 SHA256 d45bcbe45e3ed5f8d6ba3c99b9da9b202c72a9fb196a9d32d2961ee4cb791868
-EBUILD raxml-7.2.6.ebuild 1148 SHA256 050c95bdbe3c44d67e2f8c7f0ee2e1f494a929a0ab60362f83e5b3795354c658 SHA512 d7a4ee0de7613b52be93ad0d3f00bcb34f42c95bd8e8147cdfe9bea3b7495c5a0f4985bc09136f2b2a9c0ebeb32ecb3b68e3488fe157ba169d4a316198e2a25a WHIRLPOOL cee4b3a75cd89f2f950201f3d5bda20b091529b5969da905eec882eb7f786d9d6c93bc90a54b798498a30471bf40563275023d18df3f0da6ac37c126cd5e45e7
-MISC ChangeLog 1726 SHA256 13b6ddaba0ea1291a0112f04757aabb0c22edb9c89f9a4dfaf5b57884aaf0a09 SHA512 6d39e961477e5bdce29f7ff0b76ea1130e8f4afa06853f30713d5c88dcf72a2bb9f2351b98cac6f2f1dc7c87ac5e35182ab77cca46f46ac428e1a94e7e50a9a2 WHIRLPOOL 58022cd1fbae658bdc3f722c138e497d27e0fcf52ee0dea3c1e9ee5e795a0f79c54e3ae240a48cf0f39132440c36a3ecbf3b27388bd411a02687d1e0883723a7
+DIST RAxML-7.2.6.tar.bz2 202803 SHA256 d45bcbe45e3ed5f8d6ba3c99b9da9b202c72a9fb196a9d32d2961ee4cb791868 SHA512 b0027a7e583e6471a774d9e784a0be1ff63b3824a8cfbebca68bf9e414adab297206ea2d43c9b97456e6acc0a6a15f55ca33983381dd6150f9e7ea71ddecdcd3 WHIRLPOOL 7fe7ac66412c979d3ecca17e2c06a32566fefe7bdcf39664a0885fcdebc2b8187c222ca5e29cf2685085fba21a8aff0a2aefceec08823cab155a5f62f8b59490
+EBUILD raxml-7.2.6.ebuild 1071 SHA256 67e759359cde54ad06f2bd6c0a5f35b0c0f2e725600d8cb85624e5c985647779 SHA512 0e1c4da2a20d6e2517e7192198ec5f92e1c306b7dc7d3e764a024c3e143f1cafc0e644b23e856a7716977a695068b9f1a9aa681f1101594b27730d98d5a984af WHIRLPOOL eee33988f1e2999e6a77c0318e2635cd604cdce347a47380e5d5dfc4cfb3f596c5ce703a08dc5772e48dc76d7db04705f9a001844387ebcfa52910bda5e004c7
+MISC ChangeLog 1843 SHA256 2ec70b5d4538f389badbaafbbf6e5559164c6be15ced5f0214f9456f45f0517f SHA512 6c6e4e9d5c44f60a2ec10944268b2659f722a215acc63a1cc4875ec4f0d49e127a5054f6dc10a8382a800c43d2ebc6e3d930e3793620bd055ae049d722869984 WHIRLPOOL 30a5a7128142db85ba9afbfaa6c9054ed26157f197acfe63236e43e3a87a7a245a629581923a66c699c533746503519c25cda00c82a903f1e1960582912b8121
 MISC metadata.xml 166 SHA256 29b228f683c71345323d841414e410c929a320f34536eb30910498728260c8ac SHA512 51c5345bb1c4466b73e2feac8895c64fc119365e7f2c156702f4c93664d3aba028b3da9daaabf24f61a88220345fca7806771a252e8ae906cac5dec97862c7e0 WHIRLPOOL 211bf955d94fc1d93b12388a2c597a8d440fb5d78f84d59b2549569537098c3525b1fbab707441d62fabe20edcac2fd9ebe09c5d9870f1c9558d7ee90d5db5b3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUyqTCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOy/0QALzlbLma23A/uWbfiwSs18LY
-AbrrpgTzFGnVcoxqD0hTa0az9OjrQdTjhkHubQqGCaiVcAcY5qNuWv/vWOfiyxuO
-qsdfKT65FkpDaY6KT/Hakd9hRl2FudeZ2sW1fmTrrDlj8ISPPHo9yJT4+/alGMs5
-7PYAg/nPi5jBTMlu07tWMxi/RBHXkpRb6A8psj2qE79yZNwKiAzHTavJg3DCR3d6
-jkoi5PslhPOdXsQ3JF1fAzhWlGF0hWjWK96mc1E4RJuEQCVNEbXbCyqmrrR8+Gv2
-wqKhLIuAVsKx9i193YqX8gXtgU0Vl4aRbpsjciWOx8ltgKds/azyUSHV5nk07Kzz
-sT1VUc/6X+5jq6YLCjU3vpcNpAyW73KTtFuhsw0N3FMVlfrE2sknqiJHvz1vYVSj
-jS9X2CtgeCFlQ179CvY6VQ4YVF9PrI52j6AI85pCWa+fPpp9ROb83+GU2mms743k
-m60EpRkJMvF+vRB9x7roenKAFKt19wjhwr569Raz1q2YeAJ2NPs8YAzt0njM5M9a
-2hHy6dKqQ5w5LbGAynoHeQx7tCD/iOx+tI8wsUCRmSFeSUWeVRDJ/Va+fw129U9b
-YOZ0cLix05BM4IdHt1SWHsOjmG4dIur2oacKfpKFLM2N/JLT7RjB4EtFYcPBGjjy
-fUut3111q7D1EsnV/LPS
-=ZrhK
+iQJ8BAEBCgBmBQJVGCJkXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir0sYP/RLxrm0vtYRs48VWzwF0RRYe
+KVQKcOeM9LcXplgmv1SuHyZhwiHxnGXRWGKAX4FUsyvhMUGy4gdg7Nt+25mt8Vw6
+LGE0k5c99PpcJxwBMffnxB7iJLwoTcx8yfzNeeOGWKjPtwkL5fQNle+MaLJxTZ+t
+8YsYCjBp/fXKAUpTOKXn0PZu8chnHqvXgHE1ysUL2w67dcXd5r340/baslbzvJbE
+WPZCzIXDw32RfolNtJoJpRlo6n4iiJqAQgqvsPUpUjGp6roMj0MymZTedxUlD9aU
+G/JuU3vX87ak5c6cDbyJcOQV4icIFwfEEOFvF5AgEi6NgP+FBug8pkKfFdB0l8iM
+ERn+KZnxMjiaP8DcPmeZIEXtLQrT0dHnEyUyDe3m+xGcxuqNUv6hwJlWHr1V6H+G
+rOk7/2+OmHuX0DiSWc0oGJyBW2PvXkCd7s8t95BWbzIneJQ9zftr32YY+v9Iyk5Y
+btbJneJU5NYNad2DKCcdDTK8sdibHx8mbgWl7CAXWST6kea76jhjLbCAKYvk2TUT
+B5+wG38jFnO3qI/epB45+SIHHjTjfvZJwfo7QiuPQFapeCL3QgsL5A3SSITnA4qy
+gxTLZg/ugYBs0hYZ3yFMjgZYDbVwqBZ36u3o9cPq5viZC20VGGnujTQYgp/+lDUw
+yQl7b8Z7tVfIIo0zBGBz
+=fnoZ
 -----END PGP SIGNATURE-----
