@@ -23,6 +23,7 @@ DIST aufs3-standalone-3_p20150216.tar.xz 2745548 SHA256 8687fde9e6670f7920767c2f
 DIST aufs3-standalone-3_p20150223.tar.xz 2767600 SHA256 9bb4b5ff884a907876bc4236b2a4da9e8ec08b0395a24e0283dd5245a64e1068 SHA512 111bafeed3684168e4373c1655e14a91d76cfcfa6f5098788d3a12ec9a8b610709756d71928d5cfec43b3c93261aa28b2f34315809cf9ec4e3248e757b97ff09 WHIRLPOOL 356a1fdc98ace74c223c19c77b7acf13d1be12c0b46435878e2c3791891b89597660f64d0ad61c2e261bce90c1b641fd087ed079064ee13bf41b2c0c807a0f9b
 DIST aufs3-standalone-3_p20150309.tar.xz 2773040 SHA256 293cba514dc2b046d75ed4f092dabcdea707a4d23f2baccad62851140083aa0d SHA512 56a4e6a2d29e2ba9f24fe5213465d16956e0a3a22699fdab27881990c28e2e8f33d50e63996dc94714712f63fc34eff0fe069c1053acd2200e7c66e0ce2c6cb5 WHIRLPOOL 39c6f9347ed76de7e2430b6d57e8c54a85a4ce87834126e93692c1a41e3f213405d62eb11b05a5b29db6c1a817664735cf6b4599676f9b0649574549555f46f2
 DIST aufs3-standalone-3_p20150323.tar.xz 2810356 SHA256 9c9eb976647f37bed9a4455d98a1ae01cc3567abc17196edd142c12f62f7425b SHA512 2695cecef739eb63baf4759ac115d172df12d5a0b2ed7320781dbf21bde3b49b29440057099e17de161e0eeb36be394939f0e7764cea5a0c05cd1c3a08ce849b WHIRLPOOL ff1b9b97aeedcbfadb99d47ef9557c32a320ce783ebfd1eeefcb6c0126be5ce1263dbaf7f2e5ba48045e696db6b51af6af56aa17adbff4ac7e487458e9f2888e
+DIST aufs3-standalone-3_p20150330.tar.xz 2858192 SHA256 7e953a4b62442ba1faa5b0e2b52d567b623e1ca1cb17ea50e4efa7b0d954a353 SHA512 33b05d9fac11b9cd2d66d23db7392fca5b533a3a8736bb380943099a0afd689281cc42970dc03676f2a3c58009a8ce67aa8fbfa60b10d1b6a0cc61ac85f467a0 WHIRLPOOL 984b32cc9c0c26650a4a1e79ff9297ed547d17fe5a6ac29bf13380a0a3e72246a5f4fc08d4a6d5b1b641f0a566b9455961fd957673a761eb8b1c91b127b74164
 EBUILD aufs3-3_p20140811.ebuild 5289 SHA256 90423edfc0dc22d1142b3cf29cff610ed0a9a8101a200a9333195e6e75f41d38 SHA512 d2fd015adee71aeb5cc5937b2f3dbfd682525d5c127ae23aa7c3531276420f675f08460bc3ce36e5fc49acc1ce38bb97d5f9dd2a0833770376ff0383653d65e3 WHIRLPOOL b7d8a2c3df0549725ba2fe8bc4d3a009101b239de8a3ff7553bba36097d74487ee1c7737eabf8b593b419a1b284ffc1e5aaaa1e7d2391f5df9bc5254d51bdd49
 EBUILD aufs3-3_p20140818.ebuild 5289 SHA256 1ec07186d0b8c186fcfeec3af7ba6380a23c42ed9a9b92c2b83135f4b3e4e493 SHA512 8668411990b4e184ead86d4e2d670243a52885e9cbc4434b1129d6c6a172ccfdc93276277e320f366cb8fc41c461229e9c68d5598d94b6f756c51f70879efe1c WHIRLPOOL 1948e50544ebdf819120ca7480cf3f584fb3d98b4f0550de994682a4cccee47daa4d84b9589df06c396ada53f58d098cb132c3d4c14005f1f176c83492a3007a
 EBUILD aufs3-3_p20140908.ebuild 5289 SHA256 7f710603aa95a8fe1e5ee9927db6107b0212e292c10d7bbf3da2cdf2e6d60f87 SHA512 4e44d470bfcf4e04764ff640bcb5ca61196ae796e1ba41a8884cdd3a5d7484b1e79c5c93f56264bbf72f5099048d4bb7f35e787c4e185da57d7149575fc4372b WHIRLPOOL ffd516d99b7acffd6b308a3cea3ced65545780515e86a89f7b80991001a05ffd059b5320204b559ab4099e419a9ffcfd262b31b87d369e7b798e9716a45bb96a
@@ -41,24 +42,25 @@ EBUILD aufs3-3_p20150216.ebuild 5323 SHA256 7008442ad8f72f8735644925169e840398ce
 EBUILD aufs3-3_p20150223.ebuild 5323 SHA256 36405dc483520fb3534bc92f0763cee9c4f081fb0e2924adf8dc37e0ea228b4a SHA512 a083f23427cf8490ff8970d4339729bee9f13143e7de862b3ac007a4a61468c8991144d1fd615b5020c6c7ff98ee4c7b31b2487fe4d9fc6d1eff7757fa381c16 WHIRLPOOL a7e607638627134724a2874f4752e70efde0eb808956d6a05e52e958c76da6501549affd8c232db8598182aa6724433a04e21e6ce2c63d7d2266c48dd929f5c7
 EBUILD aufs3-3_p20150309.ebuild 5323 SHA256 8aeb671032f3d83e12826026ca429fcc155fa8e18100e2b5b811daeca11d94e4 SHA512 0e56373ad894657147406e945e237643d41a8f35bc1fe0f8c64e1c077b4fe290a8ac7fe66f7f56803ad911eb495b3c604d7b52ace1d6e709d36925e9a8e31ead WHIRLPOOL fe39a1f36480a4840bf09e59241910e3dd07a25929850ae565fa8fd52f3f07bd74bef7e1e6c750859389e9714a623f9ca37e5565b53490f26745802edefed1ed
 EBUILD aufs3-3_p20150323.ebuild 5323 SHA256 6d081c700a815e901176c6c5b5307b0d2d249badd9f40c5683321d990fa81588 SHA512 33e0cc0f056fe9a0b40aae9768113b2668ce7cfb2b96b3692dad6a7f6fcb1c154e22486920e5849138f54a5fc2735efee0a32bd128cf3b52ba105b3a768f6256 WHIRLPOOL bb8587c351c35e768e698872cfff63631863d196d0ece02ca75cd68a6697a863df1016cb751ba35c114a168617109a125d871631729a3c14d2c1531ab4eea30c
-MISC ChangeLog 28244 SHA256 8695f49bdd07bfc1da2ec9f7146df2a54e7c3abc077cf728c75243eebd7a395a SHA512 62232ef0639abe17f5505e6e04bf3d47c0789286e2cb7309bc0fcee07a717060a02277f46df2ce2d4ecce48cc9a4fa00e93c2216b15fd6a9c583820f95a61334 WHIRLPOOL 09166486b344c7b83513b3af574a23ebb389fb966a87a2265ae1687c2fa09f6d90aac22a04437cda05cca0fc582244cad6bb5787b3c0a6cb08ab5243971abf14
+EBUILD aufs3-3_p20150330.ebuild 5323 SHA256 cdc08aedc4dedceee0c49e1835c140b7b8a640283ca2f2bce347949f232205d3 SHA512 2ab52212c034bb7f735ff07d10f62a41e6b241221f929ff11d5b094fcef753dec16f2d6d4e1e5107c44d1d7c3a3de04e6aa7d9c160ba43e22aebe9e1c8d89304 WHIRLPOOL 449ba2603b2927f563559e1e34a485a3cf25d3a8bbeccfca9bc62566eb1e2c212c2e50edd35cc13563a9c8b597e9b9bcbbcf8e40bd5165c8366d2aef4b6ed813
+MISC ChangeLog 28376 SHA256 9219fd71af8468a449c98db4e688aead291e164c62a98082302f258707250624 SHA512 e38ab1711657874a1e39d350e16a9d9bfebd39ef5bb28cd8c459d565fc75a6d17adc7ee5f9fac0931d441d553fde770dd0f5a1815ccef96b6d6212babe915273 WHIRLPOOL aca7c8e5b4759f3a75ba45ef8e76f85c8e935779bdb0c4c3961af6354c618de5cbc05991a0c1cb470bb8644c4932acbd659add875fcfc70832ffa00f315a9472
 MISC metadata.xml 717 SHA256 3c55d0a76fa9856c7079674c14f0bfa18c454848aa652f26669b207905ee09aa SHA512 28a8b5b0e55ea607135f34da28025698b578bd6db14f48865ed4996745fccda6a05b0882a5fd13185005517b577231f6c1e01b192add81fddfd0e66b86fc8d4c WHIRLPOOL cd4f9b75f8b5aa5dad559af879445a86740c7cdfab6bd7d97d3ddba5596c139ed2c52b5447b66698078f476a65c3b4355d9f6377e70a54d9cd063e060a0ce2ce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJVFQ29XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVGCPcXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirCBAP/38p7GB6538Z4oOzfIPkgl2p
-g9Eyk/j05DD1xvqbm3jLLDytLdfbSNaM4FMtER6eehn274dInvJ9O1UxZy4z6pPk
-nA1q/iPIE4p5zK751jqPw+3+BWddlUYJLFq4pHw/EpMSMg2SJCNyroKi9JKAzj3l
-zC83lqZonvMVjTJfyFDIFNe/2j7/n1mijFRtqrVBq5/NthXe/yCj4rX6J57rOhtp
-tWTQ7GeQhxftw5f0sbsglIFpcYvqMrqjVRCSMHGT0MlHbdzz17JeGuXZHnUkNYEn
-P+RAPdnUiR4/B10ZvNFQh/Lpl6Od/jDlDlsSk+g3YqbH1iH31Dd12CAcoGkof/22
-cda91QKOzXx82E+mEm/7PNqmPdSs7TkfThCzvARo7xrly3AWGRnLJLcV9b0INzWi
-g6kui7dlKTpkYUypBt7yDYBmVp6Ms18ULmJq6covuvOFNvbhCZjaQMDsNyrUSjap
-nmDEaSH2Cfu2KQtguQaOnhhLt25V7puL5pO3Q6vLBkmlczUdbZmOuhqoGq1ubllk
-2D9DGQ0w5yjA4Tz3pQcsD4dxYdqEcRnrwExskveUHuBScm0dNcgmTrHPjf2hYqK4
-O1D0f+vBUY4FfkWpRKpYr1XVN2FV/cj7SIm6XGMUFooCU3H5eID5XTUJoTWbqNOF
-K5HAJJdN89UK7PpSTS9Y
-=gIeI
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FViriFEP/2KO7OBDW0VPw0JQHWgig6PF
+/1xw8hhg8T4YaQn3vDDViAOAlaYHiwxCL6zC34ulL+Hn1lggEmtvVUbewoVlnydN
+aIbrr5I7UydEI94ZTSg6S0NayJRROCkPBJVckeDJvD33WKYzV6NgTCwpHwpZYMM6
+9Z6ds6/axrOMoX0TryfOaPq1GBEKoWYcWM57y+n+m4v1FTLcX5sBiZLaj0XMm+kW
+k6Y6nIJwgltsG6Ixt300+9XX27QJEmDLdijL5AYjWMcTeluJVUFKp9z60kKpSAYw
+GZ/K7YMWLYCGhbkQhnBESPmFM3pSZjuGqH7i6IEPQyx9sHEu9UyuapxIqVtRUNBe
+jf3AtBpuRaKeKORFVEnPX236nYmVd/E05cFkjIuOeMhTp8cttzfmvoyf4nOYLmGQ
+a+OEYFjeVxL3FtdGoxvRiRUhWk5q1yaw3TXqWAy7VCq4NQftoev/ZYbfoi8sAMx9
+tSJXEPeWYQflVgvxhsgVmNvBw6GWQrXKOWjo1Ww51/YPp9TMuf4nU5i80DZWDtvi
+5tO3D+iJCCxjv60Txoi5e9bcGce54qyaXAJ2yFqsIFVe8d9CPKfVDpDyNcRVoY98
+nVsTVqF1yv24nyHPT7tgsa8n702Yec/WBInosqIKKJgIkR/C1uWgTB/7tdiFGC+H
+uGd+v2KWZIdqzfOUxqgY
+=QiK6
 -----END PGP SIGNATURE-----
