@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/raxml
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/raxml/ChangeLog,v 1.10 2015/01/29 21:23:13 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/raxml/ChangeLog,v 1.11 2015/03/29 16:03:43 jlec Exp $
+
+  29 Mar 2015; Justin Lecher <jlec@gentoo.org> raxml-7.2.6.ebuild:
+  Use REQUIRED_USE to constrain sse3 compatibility
 
   29 Jan 2015; Michał Górny <mgorny@gentoo.org> metadata.xml,
   raxml-7.2.6.ebuild:
